Add pytorch torchvision network example for MNIST

--- a/mnist/pytorch_torchvision.ipynb
+++ b/mnist/pytorch_torchvision.ipynb
@@ -16,137 +16,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2.6%"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2.0%"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
+    "import torch.utils as utils\n",
     "\n",
-    "# MNIST 데이터셋 로드\n",
-    "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
+    "from torchvision import datasets    # 데이터\n",
+    "from torchvision import transforms  # 네트워크 모델 전처리\n",
     "\n",
-    "trainset = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True)\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(), \n",
+    "    transforms.Normalize((0.5,), (0.5,))])\n",
     "\n",
-    "testset = torchvision.datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
-    "testloader = torch.utils.data.DataLoader(testset, batch_size=64, shuffle=False)"
+    "trainset    = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
+    "trainloader = utils.data.DataLoader(trainset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "testset     = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
+    "testloader  = utils.data.DataLoader(testset, batch_size=64, shuffle=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**DNN 모델 구성**"
+    "**DNN 모델 구성 (Class)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,23 +76,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Alt text](image-1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Training** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.92923309105927\n",
-      "Epoch 2, Loss: 0.2215128531897945\n",
-      "Epoch 3, Loss: 0.13966358785451985\n",
-      "Epoch 4, Loss: 0.10425155909894816\n",
-      "Epoch 5, Loss: 0.08346060765480229\n",
+      "Epoch 1, Loss: 0.8728671381786179\n",
+      "Epoch 2, Loss: 0.19267425777068906\n",
+      "Epoch 3, Loss: 0.12441571259191994\n",
+      "Epoch 4, Loss: 0.09640894476562611\n",
+      "Epoch 5, Loss: 0.08019169943599797\n",
       "Finished Training\n"
      ]
     }
@@ -199,7 +108,7 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
     "\n",
-    "for epoch in range(5):  # 5 에폭 동안 학습\n",
+    "for epoch in range(5): \n",
     "    running_loss = 0.0\n",
     "    for i, data in enumerate(trainloader, 0):\n",
     "        inputs, labels = data\n",
@@ -226,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the test images: 97.81%\n"
+      "Accuracy on the test images: 97.91%\n"
      ]
     }
    ],
@@ -251,13 +160,6 @@
     "\n",
     "print(f'Accuracy on the test images: {100 * correct / total}%')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
